--- a/src/views/ManageUsers/ManageUsers.module.scss
+++ b/src/views/ManageUsers/ManageUsers.module.scss
@@ -29,6 +29,7 @@
   width: 18px;
   height: 18px;
   padding-right: 8px;
+  padding-bottom: 4px;
 }
 
 .eyeIcon {
